# ProcureWatch

./: .env.backup  .env.example  .gitignore  .railwayignore  Dockerfile  Makefile  RAILWAY.md  README-v7-digest.md  README-v7b-digest.md  README.md  alembic.ini  check_matches.py  cookies.txt  dev.db  dev.db.bak  import_ted_can.ps1  import_ted_can_belgium.ps1  nightly_all.ps1  nixpacks.toml  package-lock.json  package.json  phase0_hygiene.ps1  pyproject.toml  render.yaml  requirements.txt  test.db  test_bosa.py  test_bosa_pr.py  test_count.py  test_email.py  test_fetch_and_extract_documents.db  test_import.py  test_import_ted.db  test_import_ted.py  test_matches.py  test_notice_detail_api.db  test_watchlist.db  test_watchlist_new.db  test_watchlists_api.db
.pw-profile/: Last Browser  Local State
alembic/: MIGRATION_GUIDE.md  env.py
app/: main.py
connectors/: __init__.py
core/: config.py
data/: publicprocurement_2026-01-28T20-49-47-147Z.json
docs/: publicprocurement.md
ingest/: __init__.py  enrich_eprocurement_details.py  fetch_and_extract_documents.py  import_bosa.py  import_publicprocurement.py  import_ted.py  refresh_watchlists.py  run_eprocurement_search.py  sync_bosa.py  sync_eprocurement.py  sync_notice_details.py  sync_ted.py
scripts/: __init__.py  backfill_cpv.py  bootstrap_env.py  check_eproc_config.py  collect_publicprocurement.js  cron_daily.py  cron_import.bat  cron_import.py  cron_watchlists.bat  debug_watchlist_match.py  discover_eprocurement_endpoints.py  discover_eprocurement_sea.py  fix_ted_countries.py  full_import.py  import_daily.py  (+15 more)
(+335 files in other folders)
